tests/compile_fail/self_sized.rs
use object_safe::object_safe;

#[object_safe]
trait SelfSized where Self: Sized {}

fn main() {}
